Fix layout issues

--- a/src/about/timeline/__content/timeline__content-items.scss
+++ b/src/about/timeline/__content/timeline__content-items.scss
@@ -13,9 +13,9 @@
   border-radius: 6px;
   box-shadow: none;
   color: #9E9E9E;
-  height: auto;
+  height: 35px;
   transition: all 0.5s;
-  width: auto;
+  width: 50px;
 }
 .timeline__content-item {
   position: relative;
