--- a/src/projects/projects.scss
+++ b/src/projects/projects.scss
@@ -18,8 +18,8 @@
 }
 .projects__grid > div:not(:last-child) {
   border-bottom: 1px solid rgba(248, 241, 229, 0.2);
-  margin-bottom: 20px;
-  padding-bottom: 20px;
+  margin-bottom: 40px;
+  padding-bottom: 40px;
 }
 .projects__grid-description {
   align-items: center;
